Ajout d'un système pour jouer des effets sonores